--- a/ui/components/Logo/Logo.module.css
+++ b/ui/components/Logo/Logo.module.css
@@ -1,6 +1,6 @@
 .Logo {
-  font-size: 3.5rem;
-  font-family: "Allerta Stencil", sans-serif;
+  font-size: 4rem;
+  font-family: 'Limelight';
   color: var(--color-primary);
   letter-spacing: 2px;
   text-decoration: none;
