--- a/ui/components/UI/Modal/Modal.module.css
+++ b/ui/components/UI/Modal/Modal.module.css
@@ -1,25 +1,30 @@
 .Modal {
   position: fixed;
   z-index: 1000;
-  background-color: var(--color-pure-white);
+  background-color: #fff;
   width: auto;
   max-width: 900px;
   max-height: 600px;
-  overflow: hidden;
+  overflow-y: scroll;
   border-radius: 5px;
-  box-shadow: 0 1rem 3rem
-    hsla(
-      var(--color-tertiary-h),
-      var(--color-tertiary-s),
-      var(--color-tertiary-l),
-      0.8
-    );
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
   box-sizing: border-box;
   transition: all 0.3s ease-out;
 }
+
+.Modal::-webkit-scrollbar {
+  width: 0.8rem;
+  background-color: transparent;
+}
+.Modal::-webkit-scrollbar-thumb {
+  background-color: var(--primary-color-light);
+  border-radius: 1rem;
+  width: 0.8rem;
+  transition: background-color 0.2s;
+}
+
 
 @media (max-width: 900px) and (min-width: 600px) {
   .Modal {
