--- a/ui/components/UI/Backdrop/Backdrop.module.css
+++ b/ui/components/UI/Backdrop/Backdrop.module.css
@@ -1,10 +1,5 @@
 .Backdrop {
-  background-color: hsla(
-    var(--color-tertiary-h),
-    var(--color-tertiary-s),
-    var(--color-tertiary-l),
-    0.7
-  );
+  background-color: rgba(0,0,0,8%);
   width: 100vw;
   height: 100vh;
   position: fixed;
@@ -12,6 +7,7 @@
   left: 0;
   z-index: 150;
   display: none;
+  backdrop-filter: blur(2px);
 }
 
 .Backdrop {
