--- a/ui/components/UI/Button/Button.module.css
+++ b/ui/components/UI/Button/Button.module.css
@@ -1,14 +1,16 @@
 .Btn {
-  width: 10rem;
+  /* width: 10rem; */
   height: auto;
-  background-color: var(--color-primary);
-  padding: 1rem 2rem;
+  background-color: var(--secondary-color);
+  padding: 1rem 1.5rem;
   font-weight: 600;
-  font-size: 1.6rem;
+  /* font-size: 1.6rem; */
   font-family: inherit;
   border: none;
   border-radius: 3px;
+  color: inherit;
   cursor: pointer;
+  
 }
 
 .Btn:disabled {
