--- a/ui/components/UI/SelectDropdown/Select.module.css
+++ b/ui/components/UI/SelectDropdown/Select.module.css
@@ -1,18 +1,23 @@
 .Selected {
-  background-color: var(--color-tertiary1);
-  padding: 1px 1rem;
   font-size: 1.6rem;
-  border-radius: 3px;
   width: 100%;
   position: relative;
-  display: flex;
-  align-items: center;
   height: 4rem;
   cursor: pointer;
+  border-bottom: 1px solid var(--primary-color);
 }
 .Title {
-  color: var(--color-tertiary4);
+  padding-top: 1.8rem;
+  text-transform: uppercase;
+  color: var(--primary-color-light);
 }
+
+.SelectedTitle {
+  padding-top: 1.8rem;
+  text-transform: uppercase;
+  color: var(--primary-color);
+}
+
 .SearchFilterBox {
   display: flex;
   flex-direction: column-reverse;
@@ -29,7 +34,7 @@
   border-radius: 4px;
 }
 
-.SearchFilterContainer.active {
+.SearchFilterContainer.Active {
   opacity: 1;
   max-height: 25rem;
   display: block;
@@ -37,14 +42,11 @@
 }
 
 .SearchFilterContainer::-webkit-scrollbar {
-  width: 8px;
-  background-color: var(--color-tertiary1);
+  display: none;
 }
 
-.SearchFilterContainer::-webkit-scrollbar-thumb {
-  width: 8px;
-  border-radius: 8px;
-  background-color: var(--color-primary-light);
+.SearchFilterContainer {
+  box-shadow:0 0 5px var(--primary-color-light);
 }
 
 .ListItem {
