--- a/ui/styles/globals.css
+++ b/ui/styles/globals.css
@@ -1,9 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Limelight&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  box-sizing: border-box;
+  font-family: "Raleway", sans-serif;
+}
+
+html {
+  font-size: 60.5%;
+}
+
+body {
+  font-size: 1.6rem;
+  line-height: 1.7;
+  color: var(--primary-color);
+  font-weight: 400;
 }
 
 a {
@@ -12,7 +23,32 @@ a {
 }
 
 * {
-  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: inherit;
+}
+
+:root {
+  --primary-color: hsl(197, 37%, 24%);
+  --primary-color-light: hsla(197, 37%, 24%, 0.7);
+  --primary-color-h: 197;
+  --primary-color-s: 37%;
+  --primary-color-l: 24%;
+
+  --secondary-color: hsl(27, 74%, 56%);
+  --secondary-color-light: hsla(27,74%,56%,0.7);
+  --secondary-color-h: 27;
+  --secondary-color-s: 74%;
+  --secondary-color-l: 56%;
+
+  --text-color-white: hsl(51, 100%, 83%);
+  --text-color-white-h: 51;
+  --text-color-white-s: 100%;
+  --text-color-white-l: 83%;
+
+  --text-color-black: #222;
+  /* --font-universal: "Montserrat", sans-serif;
+  --font-para: "Lora", serif; */
 }
 
 .Hide {
@@ -25,4 +61,10 @@ a {
   padding: 0;
   position: absolute;
   width: 1px;
+}
+
+.Icon svg {
+  width: 3.2rem;
+  height: 3.2rem;
+  /* fill: inherit; */
 }
