--- a/ui/components/AddProduct/AddProduct.module.css
+++ b/ui/components/AddProduct/AddProduct.module.css
@@ -5,7 +5,7 @@
 .Header h1 {
   font-weight: 400;
   font-size: 4rem;
-  margin: 2rem 4rem 0 4rem;
+  margin: 2rem 4rem 1rem 4rem;
   text-transform: capitalize;
 }
 
@@ -36,7 +36,13 @@
   font-size: 1.6rem;
   color: inherit;
   font-family: inherit;
-  border-bottom: 1px solid var(--primary-color-light);
+  border-bottom: 0.5px groove
+    hsla(
+      var(--primary-color-h),
+      var(--primary-color-s),
+      var(--primary-color-l),
+      0.3
+    );
   outline: none;
 }
 
@@ -169,35 +175,34 @@
 }
 
 .ImagePreview img {
-	height: 100%;
-	width: 100%;
-	object-fit: cover;
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	z-index: -1;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  z-index: -1;
 }
 
 .ImagePreview figcaption {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .UploadBtn {
-	cursor: pointer;
-	background-color: rgba(255,255,255,0.5);
-	border-radius: 3px;
-	height: 3.2rem;
-	width: 3.2rem;
-	border: none;
-	outline: none;
-
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 3px;
+  height: 3.2rem;
+  width: 3.2rem;
+  border: none;
+  outline: none;
 }
 
 .UploadBtn svg {
-	height: 100%;
-	width: 100%;
-	fill: var(--primary-color);
+  height: 100%;
+  width: 100%;
+  fill: var(--primary-color);
 }
