--- a/ui/components/Navigation/NavigationItems/NavigationItems.module.css
+++ b/ui/components/Navigation/NavigationItems/NavigationItems.module.css
@@ -25,7 +25,7 @@
     var(--tertiary-color) 10%,
     var(--secondary-color) 35%
   );
-  -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
   background-size: 100%;
   background-repeat: repeat;
