--- a/ui/components/UI/Spinner/Spinner.module.css
+++ b/ui/components/UI/Spinner/Spinner.module.css
@@ -1,49 +1,92 @@
-.Spinner {
-  width: 50px;
-  height: 50px;
 
-  position: relative;
-  margin: 1rem auto;
+.Container{
+  display:flex;
+  justify-content:center;
+  align-items:center;
 }
 
-.DoubleBounce1,
-.DoubleBounce2 {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background-color: var(--color-primary-dark);
-  opacity: 0.6;
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  -webkit-animation: sk-bounce 2s infinite ease-in-out;
-  animation: sk-bounce 2s infinite ease-in-out;
+.Container div{
+  position:absolute;
+  width:90px;height:51px;
 }
 
-.DoubleBounce2 {
-  -webkit-animation-delay: -1s;
-  animation-delay: -1s;
+.Container div:nth-of-type(2){transform:rotate(60deg)}
+.Container div:nth-of-type(3){transform:rotate(-60deg)}
+
+
+.Container div div{width:100%;height:100%;position:relative}
+
+.Container div div span{
+  position:absolute;
+  width:4px;height:0%;
+  /* background: linear-gradient(var(--primary-color), var(--secondary-color)); */
+  background: var(--secondary-color);
+  ;z-index:999999;
 }
 
-@-webkit-keyframes sk-bounce {
-  0%,
-  100% {
-    -webkit-transform: scale(0);
-  }
-  50% {
-    -webkit-transform: scale(1);
-  }
+.H1{left:0;
+  animation: load1 7.2s ease infinite;
+}
+.H2{right:0;
+  animation: load2 7.2s ease .6s infinite;
+}
+.H3{right:0;
+  animation: load3 7.2s ease 1.2s infinite;
+}
+.H4{right:0;
+  animation: load4 7.2s ease 1.8s infinite;
+}
+.H5{left:0;
+  animation: load5 7.2s ease 2.4s infinite;
+}
+.H6{left:0;
+  animation: load6 7.2s ease 3s infinite;
 }
 
-@keyframes sk-bounce {
-  0%,
-  100% {
-    transform: scale(0);
-    -webkit-transform: scale(0);
-  }
-  50% {
-    transform: scale(1);
-    -webkit-transform: scale(1);
-  }
+@keyframes load1 {
+  0%{bottom:0;height:0}
+  6.944444444%{bottom:0;height:100%}
+  50%{top:0;height:100%}
+  59.944444433%{top:0;height:0}
+/*   91.6666667%{top:0;height:0%;} */
+}
+
+@keyframes load2 {
+  0%{top:0;height:0}
+  6.944444444%{top:0;height:100%}
+  50%{bottom:0;height:100%}
+  59.944444433%{bottom:0;height:0}
+/*   91.6666667%{bottom:0;height:0%} */
+}
+
+@keyframes load3 {
+  0%{top:0;height:0}
+  6.944444444%{top:0;height:100%}
+  50%{bottom:0;height:100%}
+  59.94444443%{bottom:0;height:0}
+/*   91.6666667%{bottom:0;height:0%;} */
+}
+
+@keyframes load4 {
+  0%{top:0;height:0}
+  6.944444444%{top:0;height:100%}
+  50%{bottom:0;height:100%}
+  59.94444443%{bottom:0;height:0}
+/*   91.6666667%{bottom:0;height:0%;} */
+}
+
+@keyframes load5 {
+  0%{bottom:0;height:0}
+  6.944444444%{bottom:0;height:100%}
+  50%{top:0;height:100%}
+  59.94444443%{top:0;height:0}
+/*   91.6666667%{top:0;height:0%;} */
+}
+
+@keyframes load6 {
+  0%{bottom:0;height:0}
+  6.944444444%{bottom:0;height:100%}
+  50%{top:0;height:100%}
+  59.94444443%{top:0;height:0}
+/*   91.6666667%{top:0;height:0%;} */
 }
