--- a/ui/pages/orders/orders.module.css
+++ b/ui/pages/orders/orders.module.css
@@ -13,6 +13,13 @@
   margin-top: 5rem;
 }
 
+.Center {
+  display: flex;
+  height: 30rem;
+  justify-content: center;
+  align-items: center;
+}
+
 .FlexBox {
   display: flex;
   justify-content: space-between;
